fix button spacing on picker-lists

--- a/projects/eav-ui/src/app/edit/form/fields/picker/picker-list/picker-list.component.scss
+++ b/projects/eav-ui/src/app/edit/form/fields/picker/picker-list/picker-list.component.scss
@@ -126,10 +126,10 @@
 .item-actions {
   flex-shrink: 0;
 
-  .mat-mdc-icon-button {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
+  .mat-icon-button {
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
   }
 }
 
